@@ -13,6 +13,11 @@ ggplot2 0.9.3.1.99
 * Add `"none"` to documentation of `theme()` for parameter `legend.position`.
   (@krlmlr, #829)
 
+MINOR FEATURES
+
+* Allow specifying only one of the limits in a scale and use the automatic
+  calculation of the other limit by passing NA to to the limit function (xlim
+  or ylim). (Fixes #557)  Thanks Jim Hester.
 
 ggplot2 0.9.3.1
 ----------------------------------------------------------------
